# bazel-playground

dependency/: BUILD.bazel  Intermediate.java  Intermediate2.java  Intermediate3.java  Leaf.java  Root.java
